Changelog:     - Finished the homepage for narrow screens     - Main styles completed for the website     - Padauk font added to break up the monotony of a single font     - Added a "Recent Projects" section     - Changed up the color scheme for better accessibility and beauty     - Added box shadows, taken from Tailwind's library <3     - Added some specific styling for the homepage:         "project" class, "my-name-is" class

--- a/index.html
+++ b/index.html
@@ -9,25 +9,49 @@
     </head>
     <body>
         <header>
-            <h1 class="logo"><a href="./index.html">Kobijet</a></h1>
+            <h1 class="logo link"><a href="./index.html">Kobijet</a></h1>
             <nav class="nav">
-                <a href="#">About</a>
-                <a href="#">Portfolio</a>
-                <a href="#">Resume</a>
+                <a href="#" class="link">Home</a>
+                <a href="#" class="link">Portfolio</a>
+                <a href="#" class="link">Resume</a>
             </nav>
         </header>
         <article class="profile shadow-inner">
-            <img src="./assets/kr_avatar.jpg" class="inner-shadow">
-            <div>
+            <img src="./assets/kr_avatar.jpg" class="box-shadow-md">
+            <div class="margin-1rem">
                 <h2>Kobi Rogers</h2>
-                <p style="font-size: 10px;">Located in beautiful, rainy Vancouver, Washington</p>
-                <h2>Game developer, musician, & icon</h2>
+                <p>Located in wet, yet gorgeous Vancouver, Washington</p>
+                <h3>Game Developer, Musician, & Student</h3>
             </div>
         </article>
-        <article class="content">
-            <h2>About Me</h2>
-            <p>I'm a college student currently pursuing a degree in computer game development. 
-                One day I'd like to create video games and other forms of interactive media on a team!</p>
+        <article class="main margin-1rem">
+            <div class="main-left-side">
+                <h2>Welcome!</h2>
+                <p>You may be wondering a few things...</p>
+                <h3>Who am I?</h3>
+                <p class="my-name-is">My name is <span style="color: #C56D86; font-size: 1.25em;">Kobi</span>!</p>
+                <br />
+                <p>I am currently a student at Mt. Hood Community College, pursuing a degree in Computer Game Development.
+                    I really enjoy city builders, rougelikes (AND rougelites), as well as real-time strategy games and first-person shooters. Pretty much anything that has randomness or management elements. I love crafting worlds and creating immersive universes for people to explore.</p>
+                <h3>Where are you?</h3>
+                <p>Well, my super spectacular portfolio, of course! Here you'll find information about projects I've worked on in the past and ones I am working on in the present.
+                    If you're interested in what I am able to do for you, I have a contact form, as well as my contact information, on here! 
+                    Don't hesitate to reach out if you think I am a good fit for something you need done. If you're interested in my socials, they are on there too.
+                </p>
+            </div>
+            <div class="recent-projects main-right-side">
+                <h2>Recent Projects</h2>
+                <div class="project">
+                    <img src="https://via.placeholder.com/150">
+                    <div>
+                        <h3>Project Title</h3>
+                        <p><b>Description:</b> This is a description of the project.</p>
+                        <p><b>Role:</b> Designer, Developer, Artist</p>
+                        <p><b>Technologies Used:</b> HTML, CSS, Git</p>
+                        <p class="nav"><b>Links:</b><a href="" class="link">Source</a><a href="" class="link">Live</a></p>
+                    </div>
+                </div>
+            </div>
         </article>
     </body>
 </html>
