Contact form is now a bunch of links

--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
             <h1 class="logo link"><a href="./index.html">Kobijet</a></h1>
             <nav class="nav">
                 <a href="#" class="link">Home</a>
-                <a href="#" class="link">Portfolio</a>
                 <a href="#" class="link">Resume</a>
             </nav>
         </header>
+        <!-- Profile -->
         <article class="profile shadow-inner">
             <img src="./assets/kr_avatar.jpg" class="box-shadow-md">
             <div class="margin-1rem">
                 <h2>Kobi Rogers</h2>
                 <p>Located in wet, yet gorgeous Vancouver, Washington</p>
-                <h3>Game Developer, Musician, & Student</h3>
+                <h3>Game Developer, <span id="changing-title"></span>, & Student</h3>
             </div>
         </article>
+        <!-- Main Content -->
         <article class="main margin-1rem">
+            <!-- Main Left Side -->
             <div class="main-left-side">
                 <h2>Welcome!</h2>
                 <p>You may be wondering a few things...</p>
@@ -39,6 +41,7 @@
                     Don't hesitate to reach out if you think I am a good fit for something you need done. If you're interested in my socials, they are on there too.
                 </p>
             </div>
+            <!-- Main Right Side -->
             <div class="main-right-side">
                 <h2>Projects</h2>
                 <div class="project">
@@ -55,18 +58,16 @@
                         <p class=""><b>Links:</b> <a href="https://github.com/kobijet/CIS155-Kobijet/tree/master/V4" class="link big-text">Source</a> | <a href="https://kobijet.github.io/CIS155-Kobijet/V4/index.html" class="link big-text">Live</a> <span style="font-size: 0.5rem;">(warning: not mobile friendly)</span></p>
                     </div>
                 </div>
+            </div>
+            <div class="contact-me">
                 <h2>Contact Me</h2>
                 <div>
-                    <p>My inbox is open! I am always looking to help out, so if you have a project and need some, reach out!</p>
-                    <form method="GET">
-                        <br />
-                        <label for="contact-email">Email Address: </label>
-                        <input type="contact-email" name="contact-email">
-                        <br />
-                        <label for="contact-message">Message:</label>
-                        <textarea id="contact-message" name="contact-message" cols="8" rows="5"></textarea>
-                        <button type="submit">Submit</button>
-                    </form>
+                    <p>My inbox is open! I am always looking to help out, so if you have a project and need some, 
+                        reach out! I am a student and working part-time, so please allow me a few days to respond :)</p><br />
+                    <p><b>Email: </b> contact@kobijet.org</p>
+                    <p><b>Twitter: </b> <a class="link" href="https://twitter.com/kobijet624">kobijet624</a></p>
+                    <p><b>Instagram: </b> <a class="link" href="https://www.instagram.com/kobijet">kobijet</a></p>
+                    <p><b>LinkedIn: </b> <a class="link" href="https://www.linkedin.com/in/kobi-r-166851158/">Kobi Rogers</a></p>
                 </div>
             </div>
         </article>
